# ClipboardLite

./: .gitignore  README.md  package-lock.json  package.json  test-table-parser.js
docs/superpowers/plans/: 2026-06-19-payment-activation.md  2026-06-19-pro-feature-split.md  2026-06-19-qt-qml-rewrite.md
qt/: CMakeLists.txt  README.md
qt/qml/: Main.qml  QuickPanel.qml
qt/qml/components/: CategorySidebar.qml  DetailPanel.qml  HistoryList.qml  PlanComparisonDialog.qml
qt/src/: main.cpp
qt/src/core/: ClipboardItem.h  ContentClassifier.cpp  ContentClassifier.h  HistoryStore.cpp  HistoryStore.h
qt/src/models/: HistoryFilterModel.cpp  HistoryFilterModel.h  HistoryModel.cpp  HistoryModel.h
qt/tests/: tst_content_classifier.cpp  tst_desktop_integration_contract.cpp  tst_history_filter_model.cpp  tst_history_model.cpp
scripts/: payment-server.js
src/: entitlements.js  main.js  paymentClient.js  paymentServer.js  preload.js  tableParser.js  textTransforms.js
src/renderer/: index.html  panel.css  panel.html  panel.js  renderer.js  styles.css
